--- a/src/components/helpers/Component.html
+++ b/src/components/helpers/Component.html
@@ -7,6 +7,30 @@
 	import AddMedicine from '../views/Medicine/AddMedicine.html';
 	import EditMedicine from '../views/Medicine/EditMedicine.html';
 
+	import Times from '../views/Time/Times.html';
+	import AddTime from '../views/Time/AddTime.html';
+	import EditTime from '../views/Time/EditTime.html';
+	
+	import Comments from '../views/Comment/Comments.html';
+	import AddComment from '../views/Comment/AddComment.html';
+	import EditComment from '../views/Comment/EditComment.html';
+	
+	import Durations from '../views/Duration/Durations.html';
+	import AddDuration from '../views/Duration/AddDuration.html';
+	import EditDuration from '../views/Duration/EditDuration.html';
+	
+	import Advices from '../views/Advice/Advices.html';
+	import AddAdvice from '../views/Advice/AddAdvice.html';
+	import EditAdvice from '../views/Advice/EditAdvice.html';
+	
+	import NextVisits from '../views/NextVisit/NextVisits.html';
+	import AddNextVisit from '../views/NextVisit/AddNextVisit.html';
+	import EditNextVisit from '../views/NextVisit/EditNextVisit.html';
+	
+	import Referees from '../views/Referee/Referees.html';
+	import AddReferee from '../views/Referee/AddReferee.html';
+	import EditReferee from '../views/Referee/EditReferee.html';
+
 	import Patients from '../views/Patient/Patients.html';
 	import AddPatient from '../views/Patient/AddPatient.html';
 	import EditPatient from '../views/Patient/EditPatient.html';
@@ -42,6 +66,30 @@
 			Medicines,
 			AddMedicine,
 			EditMedicine,
+
+			Times,
+			AddTime,
+			EditTime,
+			
+			Comments,
+			AddComment,
+			EditComment,
+			
+			Durations,
+			AddDuration,
+			EditDuration,
+			
+			Advices,
+			AddAdvice,
+			EditAdvice,
+			
+			NextVisits,
+			AddNextVisit,
+			EditNextVisit,
+			
+			Referees,
+			AddReferee,
+			EditReferee,
 
 			Patients,
 			AddPatient,
@@ -83,6 +131,30 @@
 				else if (comp == 'medicine') return Medicines;
 				else if (comp == 'addmedicine') return AddMedicine;
 				else if (comp == 'editmedicine') return EditMedicine;
+
+				else if (comp == 'time') return Times;
+				else if (comp == 'addtime') return AddTime;
+				else if (comp == 'edittime') return EditTime;
+
+				else if (comp == 'comment') return Comments;
+				else if (comp == 'addcomment') return AddComment;
+				else if (comp == 'editcomment') return EditComment;
+
+				else if (comp == 'duration') return Durations;
+				else if (comp == 'addduration') return AddDuration;
+				else if (comp == 'editduration') return EditDuration;
+
+				else if (comp == 'advice') return Advices;
+				else if (comp == 'addadvice') return AddAdvice;
+				else if (comp == 'editadvice') return EditAdvice;
+
+				else if (comp == 'nextvisit') return NextVisits;
+				else if (comp == 'addnextvisit') return AddNextVisit;
+				else if (comp == 'editnextvisit') return EditNextVisit;
+
+				else if (comp == 'referee') return Referees;
+				else if (comp == 'addreferee') return AddReferee;
+				else if (comp == 'editreferee') return EditReferee;
 
 				else if (comp == 'patient') return Patients;
 				else if (comp == 'addpatient') return AddPatient;
