--- a/src/components/views/Investigation/AddInvestigation.html
+++ b/src/components/views/Investigation/AddInvestigation.html
@@ -8,7 +8,7 @@
 			<label class="label">Investigation</label>
 			<div class="control">
 				<input class="input" type="text" placeholder="Investigation" bind:value=data.investigation disabled="{save}"
-					required>
+					required autofocus>
 			</div>
 		</div>
 		<hr />
