--- a/src/components/views/Investigation/EditInvestigation.html
+++ b/src/components/views/Investigation/EditInvestigation.html
@@ -11,7 +11,7 @@
 			<div class="field">
 				<label class="label">Investigation</label>
 				<div class="control">
-					<input class="input" type="text" placeholder="Investigation" bind:value=data.investigation disabled="{save}" required>
+					<input class="input" type="text" placeholder="Investigation" bind:value=data.investigation disabled="{save}" required autofocus>
 				</div>
 			</div>
 			<hr />
