--- a/src/components/views/Referee/AddReferee.html
+++ b/src/components/views/Referee/AddReferee.html
@@ -1,14 +1,13 @@
 <div class="notification" transition:fly="{y: 200, duration: 1000}">
-	<h2 class="title is-2">Examination: Add
-		<a href="#examination" class="button is-info is-pulled-right"><i class="fas fa-list"></i>&nbsp;List</a>
+	<h2 class="title is-2">Referee: Add
+		<a href="#referee" class="button is-info is-pulled-right"><i class="fas fa-list"></i>&nbsp;List</a>
 	</h2>
 	<hr />
 	<form on:submit="save(event)">
 		<div class="field">
-			<label class="label">Examination</label>
+			<label class="label">Referee</label>
 			<div class="control">
-				<input class="input" type="text" placeholder="Examination" bind:value=data.examination disabled="{save}"
-					required autofocus>
+				<input class="input" type="text" placeholder="Referee" bind:value=data.referee disabled="{save}" required autofocus>
 			</div>
 		</div>
 		<hr />
@@ -22,7 +21,7 @@
 </div>
 
 <script>
-	import Model from "../../../models/examination";
+	import Model from "../../../models/referee";
 	import Loader from '../../helpers/loader.html';
 	import SubmitButton from '../../helpers/SubmitButton.html';
 	import { fly } from 'svelte-transitions';
@@ -37,7 +36,7 @@
 		data() {
 			return {
 				data: {
-					examination: "",
+					referee: "",
 				},
 				save: false,
 				tracker: {
@@ -80,7 +79,7 @@
 									saved: false
 								},
 							});
-							window.location.assign("#examination");
+							window.location.assign("#referee");
 						}, 1500);
 
 					})
@@ -91,7 +90,7 @@
 								saved: false,
 								error: true
 							},
-							error_message: "There is an error adding examination!"
+							error_message: "There is an error adding referee!"
 						});
 						setTimeout(() => {
 							this.set({
