--- a/src/components/Dashboard.html
+++ b/src/components/Dashboard.html
@@ -1,79 +1,25 @@
 <div class="container" transition:fly="{y: 200, duration: 1000}">
   <div class="columns">
-    <div class="column is-one-third">
+    <div class="column is-half">
+      <a href="#patient#add">
+        <div class="card">
+          <div class="card-content">
+            <div class="media">
+              <div class="media-content">
+                <p class="title is-2 has-text-white">Add Patient</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="column is-half">
       <a href="#patient">
         <div class="card">
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="title is-2 has-text-white">Patient</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="column is-one-third">
-      <a href="#medicine">
-        <div class="card">
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-2 has-text-white">Medicine</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="column is-one-third">
-      <a href="#diagnosis">
-        <div class="card">
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-2 has-text-white">Diagnosis</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div class="columns">
-    <div class="column is-one-third">
-      <a href="#complaint">
-        <div class="card">
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-2 has-text-white">Complaint</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="column is-one-third">
-      <a href="#examination">
-        <div class="card">
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-2 has-text-white">Examination</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="column is-one-third">
-      <a href="#investigation">
-        <div class="card">
-          <div class="card-content">
-            <div class="media">
-              <div class="media-content">
-                <p class="title is-2 has-text-white">Investigation</p>
+                <p class="title is-2 has-text-white">Patient List</p>
               </div>
             </div>
           </div>
@@ -88,7 +34,7 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="title is-2 has-text-white">Investigation History</p>
+                <p class="title is-2 has-text-white">Investigation</p>
               </div>
             </div>
           </div>
@@ -101,7 +47,7 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="title is-2 has-text-white">Prescription History</p>
+                <p class="title is-2 has-text-white">Prescription</p>
               </div>
             </div>
           </div>
