--- a/src/components/helpers/ConfirmButton.html
+++ b/src/components/helpers/ConfirmButton.html
@@ -5,7 +5,7 @@
 	{/if}
 	</p>
 	<p class="control is-expanded">
-		<button class="button is-outlined is-{size} {doing ? main_color + ' is-loading' : (error ? 'is-danger shaking' : (done ? main_color : (confirm ? 'is-outlined ' + main_color : main_color)))}" type="button" on:click="doit()" disabled="{done || doing || error || disabled}">
+		<button class="button is-{size} {doing ? main_color + ' is-loading' : (error ? 'is-danger shaking' : (done ? main_color : (confirm ? 'is-outlined ' + main_color : main_color + ' is-outlined')))}" type="button" on:click="doit()" disabled="{done || doing || error || disabled}">
 		{#if done}
 			<span><i class="fas fa-check"></i> {done_text}</span>
 		{:elseif doing}
