--- a/src/components/views/Complaint/EditComplaint.html
+++ b/src/components/views/Complaint/EditComplaint.html
@@ -11,7 +11,7 @@
 			<div class="field">
 				<label class="label">Complaint</label>
 				<div class="control">
-					<input class="input" type="text" placeholder="Complaint" bind:value=data.complaint disabled="{save}" required>
+					<input class="input" type="text" placeholder="Complaint" bind:value=data.complaint disabled="{save}" required autofocus>
 				</div>
 			</div>
 			<hr />
