--- a/src/components/views/Diagnosis/EditDiagnosis.html
+++ b/src/components/views/Diagnosis/EditDiagnosis.html
@@ -11,7 +11,7 @@
 			<div class="field">
 				<label class="label">Diagnosis</label>
 				<div class="control">
-					<input class="input" type="text" placeholder="Diagnosis" bind:value=data.diagnosis disabled="{save}" required>
+					<input class="input" type="text" placeholder="Diagnosis" bind:value=data.diagnosis disabled="{save}" required autofocus>
 				</div>
 			</div>
 			<hr />
