--- a/src/components/views/Examination/EditExamination.html
+++ b/src/components/views/Examination/EditExamination.html
@@ -11,7 +11,7 @@
 			<div class="field">
 				<label class="label">Examination</label>
 				<div class="control">
-					<input class="input" type="text" placeholder="Examination" bind:value=data.examination disabled="{save}" required>
+					<input class="input" type="text" placeholder="Examination" bind:value=data.examination disabled="{save}" required autofocus>
 				</div>
 			</div>
 			<hr />
