--- a/src/components/views/InvestigationHistory/InvestigationHistory.html
+++ b/src/components/views/InvestigationHistory/InvestigationHistory.html
@@ -2,6 +2,25 @@
   <h2 class="title is-2">Investigation History</h2>
 
   <hr />
+  <h5 class="title is-5">
+    <center>
+      <div class="columns">
+        <div class="column" style="border-right: 5px #dbdbdb solid;">
+          <span style="vertical-align: middle;">Go to >></span>
+        </div>
+        <div class="column">
+          <a href="#complaint" class="button is-info">Complaint</a>
+        </div>
+        <div class="column">
+          <a href="#examination" class="button is-info">Examination</a>
+        </div>
+        <div class="column">
+          <a href="#investigation" class="button is-info">Investigation</a>
+        </div>
+      </div>
+    </center>
+  </h5>
+  <hr />
   <br />
   <h4 class="subtitle is-4">Search by </h4>
   <div class="field is-horizontal">
@@ -18,53 +37,83 @@
               <option value={each_data.name} />
             {/each}
           </datalist>
-          </p>
-        </div>
-      </div>
-      <div class="field-label is-normal">
-        <label class="label">Date: </label>
-      </div>
-      <div class="field-body">
-        <div class="field">
-          <p class="control is-expanded">
-            <input class="input is-half" type="date" placeholder="Date" bind:value=search.date>
-          </p>
-        </div>
+        </p>
       </div>
     </div>
-    <div class="{table_div}">
-      {#if loaded}
-        <table class="table is-fullwidth" transition:fly="{x: 200, duration: 1000}">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Patient</th>
-              <th>Date</th>
-              <th><center>Create Prescription</center></th>
-              <th>View</th>
-              <th>Edit</th>
-              <th>Delete</th>
-            </tr>
-          </thead>
-          <tbody>
-              {#each data as each_data}
-                {#if (!search.patient || each_data.patient.name.toUpperCase().search(search.patient.toUpperCase())>=0) && (!search.date || each_data.date.search(search.date)>=0)}
-                  <tr>
-                    <th>{each_data.id}</th>
-                    <td><b class="has-text-info modal-trigger" on:click="showPatientDetails(each_data.patient)">{each_data.patient.name ? each_data.patient.name : 'None'}</b></td>
-                    <td>{each_data.date ? each_data.date : 'None'}</td>
-                    <td><center><a href="#prescriptionhistory#add#i#{each_data.id}" class="button is-success"><i class="fas fa-file-prescription"></i></a></center></td>
-                    <td><a class="button is-info" on:click="showInvestigation(each_data.id)"><i class="fas fa-file-pdf"></i></a></td>
-                    <td><a href="#investigationhistory#edit#{each_data.id}" class="button is-outlined is-warning"><i class="fas fa-edit"></i></a></td>
-                    <td><ConfirmButton context={each_data.id} on:do on:done></ConfirmButton></td>
-                  </tr>
-                {/if}
-              {/each}
-          </tbody>
-        </table>
-      {/if}
+    <div class="field-label is-normal">
+      <label class="label">Status: </label>
     </div>
-    {#if modal}
+    <div class="field-body">
+      <div class="field">
+        <p class="control is-expanded">
+          <select class="input is-half" bind:value=search.status>
+            <option value="A">All</option>
+            <option value="P">Prescribed</option>
+            <option value="N">Not Prescribed</option>
+          </select>
+        </p>
+      </div>
+    </div>
+    <div class="field-label is-normal">
+      <label class="label">Date: </label>
+    </div>
+    <div class="field-body">
+      <div class="field">
+        <p class="control is-expanded">
+          <input class="input is-half" type="date" placeholder="Date" bind:value=search.date>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="{table_div}">
+    {#if loaded}
+      <table class="table is-fullwidth" transition:fly="{x: 200, duration: 1000}">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Patient</th>
+            <th>Date</th>
+            <th><center>Create Prescription</center></th>
+            <th>View</th>
+            <th>Status</th>
+            <th>Edit</th>
+            <th>Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+            {#each data as each_data}
+              {#if (!search.patient || each_data.patient.name.toUpperCase().search(search.patient.toUpperCase())>=0)
+                && ((search.status=='P' && (each_data.prescription_history && each_data.prescription_history.length>0))
+                    || (search.status=='N' && (!each_data.prescription_history || each_data.prescription_history.length==0))
+                    || search.status=='A')
+                && (!search.date || each_data.date.search(search.date)>=0)}
+                <tr>
+                  <th>{each_data.id}</th>
+                  <td><b class="has-text-info modal-trigger" on:click="showPatientDetails(each_data.patient)">{each_data.patient.name ? each_data.patient.name : 'None'}</b></td>
+                  <td>{each_data.date ? each_data.date : 'None'}</td>
+                  <td><center><a href="#prescriptionhistory#add#i#{each_data.id}" class="button is-success"><i class="fas fa-file-prescription"></i></a></center></td>
+                  <td><a class="button is-info" on:click="showInvestigation(each_data.id)"><i class="fas fa-file-pdf"></i></a></td>
+                  <td>
+                    {#if each_data.prescription_history && each_data.prescription_history.length>0}
+                      <span class="tag is-success">
+                        <i class="fas fa-check"></i>&nbsp;Prescribed
+                      </span>
+                    {:else}
+                      <span class="tag is-danger">
+                        <i class="fas fa-times"></i>&nbsp;Not Prescribed
+                      </span>
+                    {/if}
+                  </td>
+                  <td><a href="#investigationhistory#edit#{each_data.id}" class="button is-outlined is-warning"><i class="fas fa-edit"></i></a></td>
+                  <td><ConfirmButton context={each_data.id} on:do on:done></ConfirmButton></td>
+                </tr>
+              {/if}
+            {/each}
+        </tbody>
+      </table>
+    {/if}
+  </div>
+  {#if modal}
     <div class="modal is-active">
       <div class="modal-background" transition:fly="{duration: 1000}"></div>
       <div class="modal-card" transition:fly="{y: -200, duration: 1000}">
@@ -87,20 +136,19 @@
         </footer>
       </div>
     </div>
-    {/if}
-    {#if investigation_modal}
+  {/if}
+  {#if investigation_modal}
     <div class="modal is-active">
       <div class="modal-background" transition:fly="{duration: 1000}"></div>
-      <div class="modal-card" transition:fly="{y: -200, duration: 1000}" style="width:33%; height:100%">
+      <div class="modal-card" transition:fly="{y: -200, duration: 1000}" style="width:50%; height:100%">
         <header class="modal-card-head">
           <b class="modal-card-title">Investigation ID: {data_investigation_modal_id}</b>
           <button class="delete" aria-label="close" on:click="set({investigation_modal: false})"></button>
         </header>
         <section class="modal-card-body">
             {#if loaded_investigation_modal}
-            <embed type='application/pdf' src="" style="width:100%; height:98%" id="emb">
-            
-              {/if}
+              <embed type='application/pdf' src="" style="width:100%; height:98%" id="emb">
+            {/if}
             {#if !loaded_investigation_modal}
               <Loader />
             {/if}
@@ -112,12 +160,13 @@
         </footer>
       </div>
     </div>
-    {/if}
-    {#if !loaded}
-      <Loader />
-    {/if}
-    <center class="has-text-danger has-text-weight-bold">{error_message}</center>
-  </div>
+  {/if}
+  {#if !loaded}
+    <Loader />
+  {/if}
+  <center class="has-text-danger has-text-weight-bold">{error_message}</center>
+</div>
+
 <script>
   import Model from "../../../models/investigation_history";
   import Patient from "../../../models/patient";
@@ -137,6 +186,7 @@
         data: {},
         search: {
           patient: "",
+          status: "A",
           date: ""
         },
         all_patients: [],
