--- a/src/components/views/Referee/Referees.html
+++ b/src/components/views/Referee/Referees.html
@@ -1,6 +1,6 @@
 <div class="notification" transition:fly="{y: 200, duration: 1000}">
-  <h2 class="title is-2">Investigation: List
-    <a href="#investigation#add" class="button is-info is-pulled-right"><i class="fas fa-plus"></i>&nbsp;Add</a>
+  <h2 class="title is-2">Referee: List
+    <a href="#referee#add" class="button is-info is-pulled-right"><i class="fas fa-plus"></i>&nbsp;Add</a>
   </h2>
 
   <hr />
@@ -8,16 +8,16 @@
   <h4 class="subtitle is-4">Search by </h4>
   <div class="field is-horizontal">
     <div class="field-label is-normal">
-      <label class="label">Investigation: </label>
+      <label class="label">Referee: </label>
     </div>
     <div class="field-body">
       <div class="field">
         <p class="control is-expanded">
-          <input list="investigation_datalist" class="input is-half" type="text" placeholder="Investigation"
-            bind:value=search.investigation autofocus>
-          <datalist id="investigation_datalist">
+          <input list="referee_datalist" class="input is-half" type="text" placeholder="Referee"
+            bind:value=search.referee autofocus>
+          <datalist id="referee_datalist">
             {#each data as each_data}
-                <option value={each_data.investigation} />
+                <option value={each_data.referee} />
               {/each}
             </datalist>
           </p>
@@ -30,18 +30,18 @@
           <thead>
             <tr>
               <th>ID</th>
-              <th>Investigation</th>
+              <th>Referee</th>
               <th>Edit</th>
               <th>Delete</th>
             </tr>
           </thead>
           <tbody>
               {#each data as each_data}
-                {#if !search.investigation || each_data.investigation.toUpperCase().search(search.investigation.toUpperCase())>=0}
+                {#if !search.referee || each_data.referee.toUpperCase().search(search.referee.toUpperCase())>=0}
                   <tr>
                     <th>{each_data.id}</th>
-                    <td>{each_data.investigation ? each_data.investigation : 'None'}</td>
-                    <td><a href="#investigation#edit#{each_data.id}" class="button is-outlined is-warning"><i class="fas fa-edit"></i></a></td>
+                    <td>{each_data.referee ? each_data.referee : 'None'}</td>
+                    <td><a href="#referee#edit#{each_data.id}" class="button is-outlined is-warning"><i class="fas fa-edit"></i></a></td>
                     <td><ConfirmButton context={each_data.id} on:do on:done></ConfirmButton></td>
                   </tr>
                 {/if}
@@ -56,7 +56,7 @@
     <center class="has-text-danger has-text-weight-bold">{error_message}</center>
   </div>
 <script>
-  import Model from "../../../models/investigation";
+  import Model from "../../../models/referee";
   import Loader from '../../helpers/loader.html';
   import ConfirmButton from '../../helpers/ConfirmButton.html';
   import { fly } from 'svelte-transitions';
@@ -71,12 +71,12 @@
       return {
         data: {
           id: "",
-          investigation: ""
+          referee: ""
         },
         loaded: false,
         error_message: "",
         search: {
-          investigation: ""
+          referee: ""
         },
         table_div: ""
       }
@@ -110,7 +110,7 @@
           .catch((e) => {
             this.set({
               loaded: true,
-              error_message: "There is an error loading investigations!"
+              error_message: "There is an error loading referees!"
             });
           });
       },
